# wasteroids

./: .gitignore  CMakeLists.txt  README.md
source/: asteroid.c  blast.c  common.c  hiscore.c  input.c  main.c  ship.c  text.c  wasteroids.h
